@startuml Product_Management_Internal_Class_Diagram
title Class Diagram - Pengelolaan Produk
skinparam defaultFontSize 14
skinparam titleFontSize 20
skinparam classAttributeIconSize 0

skinparam classAttributeIconSize 0

class ProductController {
  - productService: ProductService
  + getProducts(keyword: String, categoryId: Integer, isActive: Boolean): List<Product>
  + createProduct(request: ProductCreateRequest): Product
  + updateProduct(productId: Integer, request: ProductUpdateRequest): Product
  + updateVariantPrice(productId: Integer, variantId: Integer, newPrice: Integer): Boolean
  + softDeleteProduct(productId: Integer): Boolean
}

class ProductService {
  - productRepository: ProductRepository
  ' [REMOVED: product audit feature]
  ' - auditRepository: ProductAuditLogRepository
  + listActiveProducts(keyword: String, categoryId: Integer): List<Product>
  + registerProduct(request: ProductCreateRequest, actorId: Integer): Product
  + reviseProduct(productId: Integer, request: ProductUpdateRequest, actorId: Integer): Product
  + changeVariantSellPrice(productId: Integer, variantId: Integer, newPrice: Integer, actorId: Integer): Boolean
  + deactivateProduct(productId: Integer, actorId: Integer): Boolean
}

class ProductRepository {
  + findAllActive(keyword: String, categoryId: Integer): List<Product>
  + findById(productId: Integer): Product
  + save(product: Product): Product
  + update(product: Product): Product
  + softDelete(productId: Integer): Boolean
}

' [REMOVED: product audit feature]
' class ProductAuditLogRepository {
'   + logCreate(productId: Integer, actorId: Integer, snapshot: String): Boolean
'   + logUpdate(productId: Integer, actorId: Integer, changes: String): Boolean
'   + logSoftDelete(productId: Integer, actorId: Integer): Boolean
' }

class Product {
  - id: Integer
  - sku: String
  - name: String
  - imageUrl: String
  - minStock: Integer
  - stock: Integer
  - averageCost: Integer
  - lastPurchaseCost: Integer
  - isActive: Boolean
  - category: Category
  - baseUnit: Unit
  - variants: List<ProductVariant>
  - barcodes: List<ProductBarcode>
  + addVariant(variant: ProductVariant): void
  + addBarcode(barcode: ProductBarcode): void
  + updateIdentity(name: String, sku: String, imageUrl: String): void
  + setCategory(category: Category): void
  + setBaseUnit(unit: Unit): void
  + changeVariantPrice(variantId: Integer, newPrice: Integer): Boolean
  + deactivate(): void
}

class ProductVariant {
  - id: Integer
  - productId: Integer
  - name: String
  - sku: String
  - conversionToBase: Integer
  - sellPrice: Integer
  - isActive: Boolean
  - unit: Unit
  + updateLabel(name: String, sku: String): void
  + updateSellPrice(newPrice: Integer): void
  + deactivate(): void
}

class ProductBarcode {
  - id: Integer
  - productId: Integer
  - barcode: String
  + updateBarcode(value: String): void
}

class Category {
  - id: Integer
  - name: String
  - isActive: Boolean
  + rename(name: String): void
  + deactivate(): void
}

class Unit {
  - id: Integer
  - name: String
  - isActive: Boolean
  + rename(name: String): void
  + deactivate(): void
}

class ProductCreateRequest {
  - sku: String
  - name: String
  - imageUrl: String
  - categoryId: Integer
  - baseUnitId: Integer
  - minStock: Integer
  - variants: List<ProductVariantRequest>
  - barcodes: List<String>
}

class ProductUpdateRequest {
  - name: String
  - imageUrl: String
  - categoryId: Integer
  - baseUnitId: Integer
  - minStock: Integer
  - isActive: Boolean
  - variants: List<ProductVariantRequest>
}

class ProductVariantRequest {
  - name: String
  - sku: String
  - unitId: Integer
  - conversionToBase: Integer
  - sellPrice: Integer
}

class User <<external>>

ProductController --> ProductService
ProductService --> ProductRepository
' [REMOVED: product audit feature]
' ProductService --> ProductAuditLogRepository
ProductService ..> User : actor
Product "1" *-- "0..*" ProductVariant
Product "1" *-- "0..*" ProductBarcode
Product "0..*" --> "1" Category
Product "0..*" --> "1" Unit : baseUnit
ProductVariant "0..*" --> "1" Unit
ProductService ..> ProductCreateRequest
ProductService ..> ProductUpdateRequest
ProductCreateRequest "1" *-- "1..*" ProductVariantRequest
ProductUpdateRequest "1" *-- "0..*" ProductVariantRequest

note bottom of ProductService
Method dirancang dari sequence:
1) get/list Product
2) create Product + Multi-Variant
3) update (termasuk update harga ProductVariant)
4) soft delete Product
end note

@enduml
